--- a/lab2/makefile_Rational
+++ b/lab2/makefile_Rational
@@ -1,10 +1,10 @@
 all: rational
 
-rational: main.o rational.o
-	g++ main.o rational.o -o rational
+rational: main_rational.o rational.o
+	g++ main_rational.o rational.o -o rational
 
-main.o: main_rational.cpp"
-	g++ -c "main_rational.cpp"
+main.o: main_rational.cpp
+	g++ -c main_rational.cpp
 
 rational.o: rational.cpp
 	g++ -c rational.cpp
